--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Levi S Porto</title>
     
+<meta property="og:title" content="Levi S Porto - Designer e Escritor" />
+<meta property="og:type" content="Visite meu Portfólio!" />
+<meta property="og:url" content="http://levisporto.com/" />
+<meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
