--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
+    <!-- Title -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Levi S Porto</title>
-    
-<meta property="og:title" content="Levi S Porto - Designer e Escritor" />
-<meta property="og:type" content="Visite meu Portfólio!" />
+    <title>Levi S. Porto</title>
+
+    <!-- Open Graph / Metatags -->
+<meta property="title" content="Levi S. Porto - Designer e Escritor" />
+<meta name="description" content="Visite meu Portfólio!" />
 <meta property="og:url" content="http://levisporto.com/" />
 <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
+
+
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="http://levisporto.com/">
+<meta property="og:title" content="Levi S. Porto - Designer e Escritor" />
+<meta name="description" content="Visite meu Portfólio!" />
+<meta property="og:image" content="images/wheel-1000.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="http://levisporto.com/">
+<meta property="twitter:title" content="Levi S. Porto - Designer e Escritor" />
+<meta property="twitter:description" content="Visite meu Portfólio!" />
+<meta property="twitter:image" content="images/wheel-1000.jpg">
+
+
+
+
+<!-- Stylesheets (Custom, Bootstrap, Font-awesome Icons) -->
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
