--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                         <a href="Levi - Currículo 2025.pdf"> <i class="fas fa-certificate me-2"></i>Currículo       </a>  
                                     </button>
                                     <button class="btn btn-outline-success px-4 rounded-pill">
-                                        <i class="fas fa-sign-in me-2"></i>Portfólio
+                                        <a href="Levi - Portfólio 2024.pdf"> <i class="fas fa-sign-in me-2"></i>Portfólio      </a>  
                                     </button>
                                     <button class="btn btn-outline-success px-4 rounded-pill">
                                         <a href="escrita/index.html"><i class="fas fa-book me-2"></i>Literatura       </a>  
