removed portfolio from homepage

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 <meta property="twitter:description" content="Visite meu Portfólio!" />
 <meta property="twitter:image" content="images/wheel-1000.jpg">
 
+   <!-- mobile specific metas
+    ================================================== -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
 
 
 
@@ -68,9 +72,6 @@
                                 <div class="d-flex gap-3 mb-4">
                                     <button class="btn btn-success px-4 rounded-pill">
                                         <a href="Levi - Currículo 2025.pdf"> <i class="fas fa-certificate me-2"></i>Currículo       </a>  
-                                    </button>
-                                    <button class="btn btn-outline-success px-4 rounded-pill">
-                                        <a href="Levi - Portfólio 2024.pdf"> <i class="fas fa-sign-in me-2"></i>Portfólio      </a>  
                                     </button>
                                     <button class="btn btn-outline-success px-4 rounded-pill">
                                         <a href="escrita/index.html"><i class="fas fa-book me-2"></i>Literatura       </a>  
